--- a/partials/header.html
+++ b/partials/header.html
@@ -21,7 +21,7 @@
 
     <!-- Brand (LEFT on desktop, centered on mobile via CSS) -->
     <a class="brand" href="{{P}}index.html" aria-label="Concord Limo Home">
-      <img src="/assets/images/concord_limo_logo.png" alt="Concord Limo Logo" class="brand-logo" />
+      <img src="{{P}}assets/images/concord_limo_logo.png" alt="Concord Limo Logo" class="brand-logo" />
     </a>
 
     <!-- Desktop nav (CENTER) -->
