removed index.js

--- a/partials/footer.html
+++ b/partials/footer.html
@@ -7,10 +7,10 @@
     <div class="footer-links">
       <h4>Quick Links</h4>
       <ul>
-        <li><a href="services/">Services</a></li>
-        <li><a href="fleet/">Fleet</a></li>
-        <li><a href="service-area/">Service Area</a></li>
-        <li><a href="contact/">Contact</a></li>
+        <li><a href="{{P}}services/">Services</a></li>
+        <li><a href="{{P}}fleet/">Fleet</a></li>
+        <li><a href="{{P}}service-area/">Service Area</a></li>
+        <li><a href="{{P}}contact/">Contact</a></li>
       </ul>
     </div>
 
