--- a/partials/header.html
+++ b/partials/header.html
@@ -13,9 +13,8 @@
       <ul>
         <li><a href="{{P}}pages/services.html">Services</a></li>
         <li><a href="{{P}}pages/fleet.html">Fleet</a></li>
-        <li><a href="{{P}}pages/service-area.html">Service Area</a></li>
         <li><a href="{{P}}pages/contact.html">Contact</a></li>
-        <li class="mobile-only"><a href="{{P}}pages/contact.html">Call / Text to Book</a></li>
+        <li class="mobile-only"><a href="sms:+16105471325">Text for Quote</a></li>
       </ul>
     </nav>
 
@@ -29,7 +28,6 @@
       <ul>
         <li><a href="{{P}}pages/services.html">Services</a></li>
         <li><a href="{{P}}pages/fleet.html">Fleet</a></li>
-        <li><a href="{{P}}pages/service-area.html">Service Area</a></li>
         <li><a href="{{P}}pages/contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -38,7 +36,7 @@
     <div class="nav-right">
 
       <div class="mobile-header-actions">
-        <a class="btn btn-primary mobile-book" href="{{P}}pages/contact.html">Request a Quote</a>
+        <a class="btn btn-primary mobile-book" href="sms:+16105471325">Text for Quote</a>
 
         <button class="menu-toggle"
                 aria-expanded="false"
@@ -52,8 +50,8 @@
         </button>
       </div>
 
-      <a class="btn btn-primary cta-book desktop-only" href="{{P}}pages/contact.html">
-        Request a Quote
+      <a class="btn btn-primary cta-book desktop-only" href="sms:+16105471325">
+        Text for Quote
       </a>
     </div>
 
